<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tex1"
            android:textSize="24sp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:text="@string/tex2"/>


        <EditText
            android:id="@+id/etedad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="edad"
            android:inputType="number"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:text="@string/tex3"/>

        <EditText
            android:id="@+id/etprecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="precio"
            android:inputType="numberDecimal"/>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center"
           android:layout_marginTop="18dp"
           >

           <Button
               android:id="@+id/btnprecio"
               android:text="@string/btn1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>


           <Button
               android:id="@+id/btnlimpiar"
               android:text="@string/btn2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"/>


       </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:text="@string/tex4"/>

        <TextView
            android:id="@+id/tvprecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="12dp"
            android:text="0.0"/>


    </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>